--- a/src/components/Banner/style.css
+++ b/src/components/Banner/style.css
@@ -52,3 +52,21 @@
     border: none;
     cursor: pointer;
 }
+
+@media only screen and (max-width: 768px) {
+    .amy {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        gap: 35px;
+
+        width: 100%;
+        height: 445px;
+    }
+
+    .amy_image {
+        width: 110%;
+        height: 445px;
+    }
+}
