--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
 
 .App {
@@ -9,4 +8,6 @@
   flex-direction: column;
   gap: 10px;
   align-items: center;
+  width: 100vw;
+  height: 100vh;
 }
