--- a/src/components/Logo/style.css
+++ b/src/components/Logo/style.css
@@ -30,8 +30,14 @@
     cursor: pointer;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 768px) and (min-width: 400px) {
     .logo {
-        width: 80%;
+        width: 90%;
+    }
+}
+
+@media only screen and (max-width: 399px) {
+    .logo {
+        width: 95%;
     }
 }
