--- a/src/components/Banner/style.css
+++ b/src/components/Banner/style.css
@@ -1,33 +1,33 @@
 .amy {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    gap: 25px;
-    margin-left: 5%;
-    margin-right: 5%;
-    width: 1110px;
+    gap: 15px;
+    width: 90%;
     height: 445px;
 }
 
 .amy_image {
-    width: 222px;
-    height: 222px;
+    width: 40%;
+    height: 100%;
 
 }
 
 .amy_image>img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
 }
 
 .amy_description {
     display: flex;
     flex-direction: column;
-    gap: 33px;
-    width: 540px;
-    height: 306px;
+    justify-content: center;
+    gap: 10px;
+    width: 60%;
+    height: 70%;
+
 }
 
 .amy_description>p {
@@ -53,7 +53,7 @@
     cursor: pointer;
 }
 
-@media only screen and (max-width: 768px) and (min-width: 400px) {
+@media only screen and (max-width: 700px) and (min-width: 400px) {
     .amy {
         display: flex;
         flex-direction: row;
