--- a/src/components/Logo/style.css
+++ b/src/components/Logo/style.css
@@ -2,22 +2,22 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 2%;
-    margin-bottom: 10px;
-    width: 72%;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    width: 90%;
 }
 
 
 .logo_img {
-    width: 64px;
-    height: 64px;
+    width: 32px;
+    height: 32px;
 
 }
 
 .logo_btn {
-    width: 228px;
-    height: 56px;
-    border-radius: 25px;
+    width: 114px;
+    height: 28px;
+    border-radius: 12px;
     color: #FFF7F0;
     background-color: black;
     border: none;
@@ -30,7 +30,7 @@
     cursor: pointer;
 }
 
-@media only screen and (max-width: 768px) and (min-width: 400px) {
+@media only screen and (max-width: 700px) and (min-width: 400px) {
     .logo {
         width: 90%;
     }
